force-app/main/default/objects/Integration_Message__c/Integration_Message__c.object-meta.xml
<CustomObject>
    <description>Stores P2P callout request and response for audit and cached fetch. Each API hit creates a record; consumers fetch from this object instead of direct callout.</description>
    <label>Integration Message</label>
    <nameField>
        <label>Integration Message Name</label>
        <type>AutoNumber</type>
        <displayFormat>IM-{000000}</displayFormat>
    </nameField>
    <pluralLabel>Integration Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>