force-app/main/default/objects/Integration_Message__c/fields/Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Failure_Reason__c</fullName>
    <label>Failure Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Deployed</description>
</CustomField>