force-app/main/default/objects/Integration_Message__c/fields/Http_Method__c.field-meta.xml
<CustomField>
    <fullName>Http_Method__c</fullName>
    <label>HTTP Method</label>
    <length>20</length>
    <type>Text</type>
    <description>Deployed</description>
</CustomField>