force-app/main/default/objects/Integration_Message__c/fields/Integration_Name__c.field-meta.xml
<CustomField>
    <fullName>Integration_Name__c</fullName>
    <label>Integration Name</label>
    <length>100</length>
    <type>Text</type>
    <description>Deployed</description>
</CustomField>