force-app/main/default/objects/Integration_Message__c/fields/Is_Success__c.field-meta.xml
<CustomField>
    <fullName>Is_Success__c</fullName>
    <label>Is Success</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Deployed</description>
</CustomField>