force-app/main/default/objects/Integration_Message__c/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <label>Named Credential</label>
    <length>100</length>
    <type>Text</type>
    <description>Deployed</description>
</CustomField>