force-app/main/default/objects/Integration_Message__c/fields/Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Reference_Id__c</fullName>
    <label>Reference Id</label>
    <length>100</length>
    <type>Text</type>
    <description>Deployed</description>
</CustomField>