force-app/main/default/objects/Integration_Message__c/fields/Request_Headers__c.field-meta.xml
<CustomField>
    <fullName>Request_Headers__c</fullName>
    <label>Request Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Deployed</description>
</CustomField>