force-app/main/default/objects/Integration_Message__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
    <description>Deployed</description>
</CustomField>