force-app/main/default/objects/Integration_Message__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <label>Status Code</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Deployed</description>
</CustomField>